<resources>
    <string name="app_name">SmartLock</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="not_login_tips1">You are not logged in</string>
    <string name="not_login_tips2">Please log in and then operate</string>
    <string name="login_now">Login</string>
    <string name="no_device_tips1">No device</string>
    <string name="no_device_tips2">Add device to view and manage it</string>
    <string name="add_device_now">Add device</string>
    <string name="message">Message</string>
    <string name="no_message_tips">No Message</string>
    <string name="me">My</string>
    <string name="device_management">Device management</string>
    <string name="check_update">Check for updating</string>
    <string name="version_code">Version code</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="modify_password">Modify password</string>
    <string name="open_gesture_password_validation">Gesture password validation</string>
    <string name="gesture_password_validation">Gesture password validation</string>
    <string name="set_gesture_password">Set gesture password</string>
    <string name="draw_unlock_pattern">Draw unlock pattern</string>
    <string name="set_unlock_pattern">Set unlock pattern</string>
    <string name="set_unlock_pattern_again">Set unlock pattern again</string>
    <string name="unlock_pattern_four_point_tips">Connect %d points at least,please redraw</string>
    <string name="set_unlock_pattern_different">Not consistent with last drawing,please redraw</string>
    <string name="set_unlock_pattern_done">Set gesture unlock pattern successfully</string>
    <string name="validation_gesture_password_success">Unlock successfully</string>
    <string name="validation_gesture_password_fail">Wrong password</string>
    <string name="product_list">Product list</string>
    <string name="bluetooth_smart_lock">Ble lock</string>
    <string name="prepare">Prepare</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="ble_device_prepare_tips">Enter “9#” on the lock to make the bluetooth lock connectable,\nthen click 「next」</string>
    <string name="find_device">Find device</string>
    <string name="scan_qr_code">QR code</string>
    <string name="found_device">Devices found:</string>
    <string name="refresh">Refresh</string>
    <string name="ble_device_pairing_tips">Click the device in the list to begin pairing</string>
    <string name="scan">Scan</string>
    <string name="gallery">Gallery</string>
    <string name="turn_on_flash">Turn on flash</string>
    <string name="turn_off_flash">Turn off flash</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="battery">Battery</string>
    <string name="unlock">Unlock</string>
    <string name="key_management">ManageKey</string>
    <string name="temp_password">TempPassword</string>
    <string name="temp_password_abbr">TempPwd</string>
    <string name="set_volume">Unlocking notification volume</string>
    <string name="volume_mute">Mute</string>
    <string name="volume_low">Low</string>
    <string name="volume_middle">Medium</string>
    <string name="volume_high">High</string>
    <string name="always_unlock">Passageway</string>
    <string name="anti_thief_alarm">Anti-pry alarm</string>
    <string name="human_detect">Human detect</string>
    <string name="key_detect">Key insert detect</string>
    <string name="set_rfic">Proximity card</string>
    <string name="fingerprint_smart_update">Fingerprint intelligent update</string>
    <string name="unlock_warning_tone">Unlock prompt tone</string>
    <string name="set_volume_tips">Keypad tone and unlock tone volume</string>
    <string name="unlock_warning_tone_tips">\"Please open the door by the handle\" prompt</string>
    <string name="always_unlock_tips">After enabling, the lock is in the unlock state,\nand it will lock after identify again</string>
    <string name="anti_thief_alarm_tips">After enabling, alarm sound when pry the lock</string>
    <string name="key_detect_tips">After enabling, alarm sound when the key insert</string>
    <string name="rfic_tips">After enabling, please keep the proximity card\nproperly to prevent it from being copied</string>
    <string name="rfic_warning">Please pay attention to check whether there are foreign objects on the surface of fingerprint sensor to prevent the tampering of fingerprint data</string>
    <string name="fingerprint_smart_update_tips">After enabling, please pay attention to\ncheck whether there are foreign objects on\nthe surface of fingerprint sensor to\nprevent the tampering of fingerprint data</string>
    <string name="fingerprint_smart_update_warning">Please pay attention to check whether there are foreign objects on the surface of fingerprint sensor to prevent the tampering of fingerprint data</string>
    <string name="lock_language">Lock language</string>
    <string name="set_lock_language">Set lock language</string>
    <string name="always_unlock_on">Enable passageway</string>
    <string name="always_unlock_off">Disable passageway</string>
    <string name="anti_thief_alarm_on">Enable anti-pry</string>
    <string name="anti_thief_alarm_off">Disable anti-pry</string>
    <string name="human_detect_on">Enable human detect</string>
    <string name="human_detect_off">Disable human detect</string>
    <string name="key_detect_on">Enable key insert detect</string>
    <string name="key_detect_off">Disable key insert detect</string>
    <string name="set_lock_language_chinese">The lock language has been set to Chinese</string>
    <string name="set_lock_language_english">The lock language has been set to English</string>
    <string name="unlock_warning_tone_on">Enable unlock prompt tone</string>
    <string name="unlock_warning_tone_off">Disable unlock prompt tone</string>
    <string name="fingerprint_smart_update_on">Enable fingerprint intelligent update</string>
    <string name="fingerprint_smart_update_off">Disable fingerprint intelligent update</string>
    <string name="set_rfic_on">Enable proximity card</string>
    <string name="set_rfic_off">Disable proximity card</string>
    <string name="set_volume_success">Set volume successfully</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="share">Share</string>
    <string name="non_admin_cannot_modify">Non-administrator cannot set</string>
    <string name="delete_device">Delete device</string>
    <string name="id">ID</string>
    <string name="fingerprint_unlock">Fingerprint unlock</string>
    <string name="password_unlock">Password unlock</string>
    <string name="proximity_card_unlock">Proximity card unlock</string>
    <string name="key_unlock">Key unlock</string>
    <string name="remote_unlock">Remote unlock</string>
    <string name="bluetooth_unlock">Bluetooth unlock</string>
    <string name="face_unlock">Face unlock</string>
    <string name="temp_password_unlock">Temp password unlock</string>
    <string name="freeze">Lock freeze</string>
    <string name="fingerprint_freeze">Fingerprint freeze</string>
    <string name="password_freeze">Password freeze</string>
    <string name="proximity_card_freeze">Proximity card freeze</string>
    <string name="key_freeze">Key freeze</string>
    <string name="remote_freeze">Remote freeze</string>
    <string name="bluetooth_freeze">Bluetooth freeze</string>
    <string name="face_freeze">Face freeze</string>
    <string name="add_fingerprint">Add fingerprint</string>
    <string name="add_password">Add password</string>
    <string name="add_proximity_card">Add proximity card</string>
    <string name="add_key">Add key</string>
    <string name="add_remote">Add remote</string>
    <string name="add_bluetooth">Add bluetooth</string>
    <string name="add_face">Add face</string>
    <string name="add_temp_password">Add temp password</string>
    <string name="delete">Delete</string>
    <string name="delete_fingerprint">Delete fingerprint</string>
    <string name="delete_password">Delete password</string>
    <string name="delete_proximity_card">Delete proximity card</string>
    <string name="delete_key">Delete key</string>
    <string name="delete_remote">Delete remote</string>
    <string name="delete_bluetooth">Delete bluetooth</string>
    <string name="delete_face">Delete face</string>
    <string name="delete_temp_password">Delete temp password</string>
    <string name="alarm_anti_thief">Anti-pry alarm</string>
    <string name="alarm_key_detect">Key detect alarm</string>
    <string name="header_pull_down">Pull down to refresh</string>
    <string name="header_refreshing">Refreshing...</string>
    <string name="header_loading">Loading...</string>
    <string name="header_release">Release to refresh</string>
    <string name="header_finish">Refresh completed</string>
    <string name="header_failed">Refresh failed</string>
    <string name="header_update">\'Last update\' M-d HH:mm</string>
    <string name="footer_pull_up">Pull up to load more</string>
    <string name="footer_release">Release to load immediately</string>
    <string name="footer_loading">Loading...</string>
    <string name="footer_refreshing">Refreshing...</string>
    <string name="footer_finish">Load completed</string>
    <string name="footer_failed">Load failed</string>
    <string name="footer_all_loaded">All loaded</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="password">Password</string>
    <string name="proximity_card">Proximity card</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="no_key">No key</string>
    <string name="admin">Administrator</string>
    <string name="user">Ordinary user</string>
    <string name="modify_key">ModifyKey</string>
    <string name="modify_name">Modify name</string>
    <string name="modify_authority">Modify authority</string>
    <string name="device_name">Modify name</string>
    <string name="device_name_null_tips">The device name cannot be empty</string>
    <string name="key_name">Key name</string>
    <string name="device_name_hint">Please enter a custom device name</string>
    <string name="key_name_hint">Please enter a custom key name</string>
    <string name="lock_name_oversize">Enter a maximum of 12 characters</string>
    <string name="key_name_oversize">Enter a maximum of 10 characters</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="temp_password_disconnect_tips">This password will be invalidated if:\n1.Use this password to unlock\n2.Connect the bluetooth lock and click the 「TempPassword」 button to reset the temp password</string>
    <string name="temp_password_connected_tips1">Reset temp password?</string>
    <string name="temp_password_connected_tips2">(This will invalidate the previous temp password)</string>
    <string name="temp_password_disconnect_reset_tips">(Reconnect the bluetooth to reset the temp password)</string>
    <string name="temp_password_disconnect_empty_tips">All temp passwords have been used up</string>
    <string name="temp_password_disconnect_remain_tips">Remaining %d temp passwords</string>
    <string name="copy">Copy</string>
    <string name="ok">Ok</string>
    <string name="choose_ways_to_add_key">Please select the key type</string>
    <string name="enter_password_title">Please enter password</string>
    <string name="enter_password_hint">Please enter 6-12 digits</string>
    <string name="confirm_password_title">Please enter password again</string>
    <string name="confirm_password_hint">Please enter 6-12 digits</string>
</resources>