<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_20">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_lock_language"
        android:textColor="#4A4A4A"
        android:textSize="@dimen/dp_18"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20">

        <RadioButton
            android:id="@+id/set_language_chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chinese"
            android:textColor="#4A4A4A"
            android:textStyle="bold"
            android:textSize="@dimen/dp_14" />

        <RadioButton
            android:id="@+id/set_language_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textColor="#4A4A4A"
            android:textStyle="bold"
            android:textSize="@dimen/dp_14" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="horizontal">

        <Button
            android:id="@+id/set_language_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/gray_button_bg"
            android:text="@string/cancel"
            android:textColor="#4A4A4A"
            android:textSize="@dimen/dp_16"
            android:textStyle="bold"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/set_language_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/blue_button_bg"
            android:text="@string/ok"
            android:textColor="#4A4A4A"
            android:textSize="@dimen/dp_16"
            android:textStyle="bold"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>