<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/popup_tempPassword_buttonGroup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_25"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="horizontal">

        <Button
            android:textAllCaps="false"
            android:id="@+id/popup_tempPassword_cancel"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/gray_button_bg"
            android:text="@string/cancel"
            android:textColor="#4A4A4A"
            android:textSize="@dimen/dp_18"
            android:textStyle="bold" />
        <Button
            android:textAllCaps="false"
            android:id="@+id/popup_tempPassword_copy"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/blue_button_bg"
            android:text="@string/copy"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dp_18"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:id="@+id/popup_tempPassword_title"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_25"
        android:text="@string/temp_password"
        android:textColor="#4A4A4A"
        android:textSize="@dimen/dp_22"
        android:textStyle="bold" />
    <TextView
        android:layout_below="@id/popup_tempPassword_title"
        android:id="@+id/popup_tempPassword_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="#4A4A4A"
        android:textSize="@dimen/dp_36"
        android:textStyle="bold" />
    <TextView
        android:text="@string/temp_password_disconnect_tips"
        android:layout_below="@id/popup_tempPassword_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_5"
        android:textColor="#BBBBBB"
        android:textSize="@dimen/dp_14"
        android:textStyle="bold" />
</RelativeLayout>