<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/pairingLockActivity_actionBar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@android:color/transparent"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/pairingLockActivity_returnLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_20">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="10dp"
                android:layout_height="15dp"
                android:src="@drawable/left_arrow_black" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/find_device"
            android:textColor="#4A4A4A"
            android:textSize="@dimen/dp_18"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/pairingLockActivity_scanLayout"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_44"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/scan_qr_code"
                android:textColor="#4A4A4A"
                android:textSize="@dimen/dp_16" />

            <ImageView
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_width="@dimen/dp_22"
                android:layout_height="@dimen/dp_15"
                android:layout_gravity="center_vertical"
                android:src="@drawable/scan" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pairingLockActivity_textLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pairingLockActivity_actionBar"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_40">

        <TextView
            android:textSize="@dimen/dp_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/found_device"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/pairingLockActivity_scanTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/refresh"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_16" />
    </RelativeLayout>

    <ListView
        android:id="@+id/pairingLockActivity_scannedLockListView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:layout_below="@id/pairingLockActivity_textLayout"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:background="@drawable/shape_listview" />


    <TextView
        android:id="@+id/pairingLockActivity_connectTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pairingLockActivity_scannedLockListView"
        android:layout_centerHorizontal="true"
        android:text="@string/ble_device_pairing_tips"
        android:textColor="#9B9B9B"
        android:textSize="@dimen/dp_14" />

</RelativeLayout>