<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <Button
        android:id="@+id/popup_bluetoothdevice_add_password_nextStep"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@drawable/blue_button_bg"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dp_18"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_23"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/popup_bluetoothdevice_add_password_nextStep"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_password_title"
            android:textColor="#4A4A4A"
            android:textSize="@dimen/dp_20"
            android:textStyle="bold" />
        <RelativeLayout
            android:layout_marginTop="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:background="@drawable/shape_edittext_add_key_name"
                android:id="@+id/popup_bluetoothdevice_add_password_new"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:hint="@string/enter_password_hint"
                android:inputType="numberPassword"
                android:maxLength="12"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/dp_15" />
            <CheckBox
                android:id="@+id/popup_bluetoothdevice_add_password_new_visible"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@drawable/selector_visible"
                android:button="@null" />

        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/confirm_password_title"
            android:textColor="#4A4A4A"
            android:textSize="@dimen/dp_20"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_marginTop="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/popup_bluetoothdevice_add_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:background="@drawable/shape_edittext_add_key_name"
                android:hint="@string/confirm_password_hint"
                android:inputType="numberPassword"
                android:maxLength="12"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/dp_15" />

            <CheckBox
                android:id="@+id/popup_bluetoothdevice_add_password_confirm_visible"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@drawable/selector_visible"
                android:button="@null" />

        </RelativeLayout>

        <TextView
            android:layout_gravity="center_horizontal"
            android:id="@+id/popup_bluetoothdevice_add_password_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:textColor="#4A4A4A"
            android:textSize="@dimen/dp_14"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>